fix: layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 body {
   font-family: Arial, "Hiragino Sans GB", 冬青黑, "Microsoft YaHei", 微软雅黑, SimSun, 宋体, Helvetica, Tahoma, "Arial sans-serif";
-  background: white;
+  background: #d4d4d4;
+  margin: 0;
 }
 
 .select-wrap {
@@ -360,7 +361,7 @@ body {
   /* border: 1px solid #001489; */
   border-radius: 8px;
   height: 40px;
-  width: 90%;
+  width: 87%;
   right: 7px;
   /* align-self: center; */
   display: inline;
@@ -371,15 +372,16 @@ body {
 }
 
 .highlight {
-  position: absolute;
+  position: relative;
   top: 50%;
   transform: translate(0, -50%);
-  width: 100%;
+  /* width: 100%; */
   background-color: white;
   /* border-top: 1px solid #333;
   border-bottom: 1px solid #333; */
   /* font-size: 20px; */
   color: black;
+  font-weight: bold;
   overflow: hidden;
 }
 
@@ -387,6 +389,10 @@ body {
   position: absolute;
   width: 100%;
   list-style-type: none;
+  /* SE */
+  /* top: -45px; */
+  /* 11 */
+  top: -60px;
 }
 
 .date-selector-container {
